--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,13 +1,24 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>login</ion-title>
-  </ion-toolbar>
-</ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">login</ion-title>
-    </ion-toolbar>
-  </ion-header>
+
+<ion-content>
+  <div class="flex-center">
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title color="success">Recicla</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+<ion-item>
+  <ion-label position="floating">Email</ion-label>
+  <ion-input type="email"  [(ngModel)]="userLoginModal.email"></ion-input>
+</ion-item>
+<ion-item>
+  <ion-label position="floating">Password</ion-label>
+  <ion-input type="Password"  [(ngModel)]="userLoginModal.password"></ion-input>
+</ion-item>
+<ion-button color="dark" fill="clear" size="full">olvidaste tu correo/contraseña?</ion-button>
+<ion-button color="success" size="full" (click)="Login(userLoginModal)">ingresar</ion-button>
+<ion-button color="success" fill="clear" size="full" (click)="register()">registrar</ion-button>
+      </ion-card-content>
+    </ion-card>
+  </div>
 </ion-content>
