segundo kick bd

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -13,8 +13,8 @@
       <img src="https://duckduckgo.com/i/0d7eda0e.png" alt="">
     </ion-avatar>
     <ion-label>
-      <h1>benjamin salas</h1>
-      <h3>benjabox1@gmail.com</h3>
+      <h1>Username: {{ userInfoReceived }}</h1>
+      <h3>correo: {{ userInfoReceived }}</h3>
       <p>alumno</p>
     </ion-label>
   </ion-item>
