--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -9,7 +9,7 @@
       <ion-card-content>
 <ion-item>
   <ion-label position="floating">Email</ion-label>
-  <ion-input type="email"  [(ngModel)]="userLoginModal.email"></ion-input>
+  <ion-input type="email"  [(ngModel)]="userLoginModal.correo"></ion-input>
 </ion-item>
 <ion-item>
   <ion-label position="floating">Password</ion-label>
