--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -16,7 +16,7 @@
   <ion-input type="Password"  [(ngModel)]="userLoginModal.password"></ion-input>
 </ion-item>
 <ion-button color="dark" fill="clear" size="full">olvidaste tu correo/contraseña?</ion-button>
-<ion-button color="success" size="full" (click)="Login(userLoginModal)">ingresar</ion-button>
+<ion-button color="success" size="full" (click)="login(userLoginModal)">ingresar</ion-button>
 <ion-button color="success" fill="clear" size="full" (click)="register()">registrar</ion-button>
       </ion-card-content>
     </ion-card>
