bd login funcional

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,7 @@
     <ion-menu contentId="main-content" type="overlay">
       <ion-content>
         <ion-list id="inbox-list">
-          <ion-list-header>reciclica</ion-list-header>
-          <ion-note>Reyclng app</ion-note>
+          <ion-list-header>duocAsistencia</ion-list-header>
           <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
             
           </ion-menu-toggle>
