--- a/src/app/pages/asistencia/asistencia.page.html
+++ b/src/app/pages/asistencia/asistencia.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="success">
+  <ion-toolbar color="warning">
     <ion-buttons slot="start">
       <ion-back-button text=""></ion-back-button>
     </ion-buttons>
@@ -21,5 +21,5 @@
       <ion-textarea></ion-textarea>
     </ion-item>
   </ion-list>
-  <ion-button size="full" color="success" (click)="verAsistencia()">ver asisterncia</ion-button>
+  <ion-button size="full" color="warning" (click)="verAsistencia()">ver asisterncia</ion-button>
 </ion-content>
