--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,20 +1,20 @@
 <ion-header>
-  <ion-toolbar color="success">
-    <ion-button color="success" slot="start">
+  <ion-toolbar color="warning">
+    <ion-button color="warning" slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-button>
     <ion-title>Bienvenido</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
-<ion-list color="success">
+<ion-list color="warning" [inset]="true" *ngIf="userInfoReceived | async as ch">
   <ion-item>
     <ion-avatar slot="start">
       <img src="https://duckduckgo.com/i/0d7eda0e.png" alt="">
     </ion-avatar>
     <ion-label>
-      <h1>Username: {{ userInfoReceived }}</h1>
-      <h3>correo: {{ userInfoReceived }}</h3>
+      <h1>{{ ch.username }}</h1>
+      <h3>{{ ch.correo }}</h3>
       <p>alumno</p>
     </ion-label>
   </ion-item>
@@ -31,7 +31,7 @@
         <p>22/10/2023</p>
       </ion-label>
     </ion-item>
-    <ion-button color="success" fill="clear" size="full" (click)="miAsistencia()">ver todo</ion-button>
+    <ion-button color="warning" fill="clear" size="full" (click)="miAsistencia()">ver todo</ion-button>
   </ion-card-content>
 </ion-card>
 </ion-content>
