--- a/src/app/pages/loader/loader.page.html
+++ b/src/app/pages/loader/loader.page.html
@@ -2,7 +2,7 @@
 
 <ion-content>
   <div class="flex-center">
-    <ion-spinner color="success"></ion-spinner>
+    <ion-spinner color="warning"></ion-spinner>
   </div>
   
 </ion-content>
