--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -4,7 +4,7 @@
   <div class="flex-center">
     <ion-card>
       <ion-card-header>
-        <ion-card-title color="success">Recicla</ion-card-title>
+        <ion-card-title color="warning">DuocAsistencias</ion-card-title>
       </ion-card-header>
       <ion-card-content>
 <ion-item>
@@ -16,8 +16,8 @@
   <ion-input type="Password"  [(ngModel)]="userLoginModal.password"></ion-input>
 </ion-item>
 <ion-button color="dark" fill="clear" size="full">olvidaste tu correo/contraseña?</ion-button>
-<ion-button color="success" size="full" (click)="login(userLoginModal)">ingresar</ion-button>
-<ion-button color="success" fill="clear" size="full" (click)="register()">registrar</ion-button>
+<ion-button color="warning" size="full" (click)="login(userLoginModal)">ingresar</ion-button>
+<ion-button color="warning" fill="clear" size="full" (click)="register()">registrar</ion-button>
       </ion-card-content>
     </ion-card>
   </div>
