--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -1,6 +1,6 @@
 <ion-header>
-  <ion-toolbar color="success">
-    <ion-button color="success" slot="start">
+  <ion-toolbar color="warning">
+    <ion-button color="warning" slot="start">
       <ion-back-button title=""></ion-back-button>
     </ion-button>
     <ion-title>register</ion-title>
