--- a/src/app/pages/mi-asistencia/mi-asistencia.page.html
+++ b/src/app/pages/mi-asistencia/mi-asistencia.page.html
@@ -1,6 +1,6 @@
 <ion-header>
-  <ion-toolbar color="success">
-    <ion-button color="success" slot="start">
+  <ion-toolbar color="warning">
+    <ion-button color="warning" slot="start">
 <ion-back-button text=""></ion-back-button>
     </ion-button>
     <ion-title>Mi Asistencia</ion-title>
@@ -8,7 +8,7 @@
 </ion-header>
 <ion-content>
   
-  <ion-list color="success">
+  <ion-list color="warning">
     <ion-item>
       <ion-avatar slot="start">
         <img src="https://duckduckgo.com/i/0d7eda0e.png" alt="">
