--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -15,7 +15,7 @@
     <ion-label>
       <h1>{{ ch.username }}</h1>
       <h3>{{ ch.correo }}</h3>
-      <p>alumno</p>
+      <p>{{ ch.tipoUsuario }}</p>
     </ion-label>
   </ion-item>
 </ion-list>
