--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -14,7 +14,7 @@
     <ion-card-content>
       <ion-item>
         <ion-label position="floating">nombre de usuario </ion-label>
-        <ion-input type="text" [(ngModel)]="userRegisterModal.usuario"></ion-input>
+        <ion-input type="text" [(ngModel)]="userRegisterModal.username"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="floating">contraseña</ion-label>
@@ -51,7 +51,7 @@
       </ion-item>
       <ion-item>
         <ion-label position="floating">Carrera</ion-label>
-        <ion-input type="text" [(ngModel)]="userRegisterModal.carrera"></ion-input>
+        <ion-input type="text" [(ngModel)]="userRegisterModal.tipoCarrera"></ion-input>
       </ion-item>
     </ion-card-content>
   </ion-card>
