--- a/src/app/pages/mi-asistencia/mi-asistencia.page.html
+++ b/src/app/pages/mi-asistencia/mi-asistencia.page.html
@@ -21,4 +21,33 @@
       </ion-label>
     </ion-item>
   </ion-list>
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button color="warning" id="open-modal" expand="block">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+    </ion-fab>
+    <ion-modal trigger="open-modal" (willDismiss)="onWillDismiss($event)">
+      <ng-template>
+        <ion-header>
+          <ion-toolbar>
+            <ion-buttons slot="start">
+              <ion-button (click)="cancel()">Cancel</ion-button>
+            </ion-buttons>
+            <ion-title>Asistencia</ion-title>
+            <ion-buttons slot="end">
+              <ion-button (click)="insertarAsistencia(asistencia)" [strong]="true">Confirm</ion-button>
+            </ion-buttons>
+          </ion-toolbar>
+        </ion-header>
+        <ion-content class="ion-padding">
+          <ion-item>
+              <ion-input
+                label="ingresa la materia"
+                type="text"
+                [(ngModel)]="asistencia.materia"
+              ></ion-input>
+            </ion-item>
+        </ion-content>
+      </ng-template>
+    </ion-modal>
 </ion-content>
