--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -3,6 +3,9 @@
     <ion-button color="warning" slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-button>
+    <ion-button color="danger" slot="end" (click)="cerrar()">
+      <ion-icon name="close" aria-hidden="true"></ion-icon>
+    </ion-button>
     <ion-title>Bienvenido</ion-title>
   </ion-toolbar>
 </ion-header>
