--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,23 +1,24 @@
-
-
 <ion-content>
   <div class="flex-center">
     <ion-card>
       <ion-card-header>
-        <ion-card-title color="warning">DuocAsistencias</ion-card-title>
+        <ion-card-title color="warning" class="flex-center" fill="clear" size="full">DuocAsistencias</ion-card-title>
+        <ion-item *ngIf="loginError" class="error-message"><ion-card class="flex-center" color="danger">
+          <p>Correo o/y contraseña incorrecta</p>
+        </ion-card></ion-item>
       </ion-card-header>
       <ion-card-content>
-<ion-item>
-  <ion-label position="floating">Email</ion-label>
-  <ion-input type="email"  [(ngModel)]="userLoginModal.correo"></ion-input>
-</ion-item>
-<ion-item>
-  <ion-label position="floating">Password</ion-label>
-  <ion-input type="Password"  [(ngModel)]="userLoginModal.password"></ion-input>
-</ion-item>
-<ion-button color="dark" fill="clear" size="full">olvidaste tu correo/contraseña?</ion-button>
-<ion-button color="warning" size="full" (click)="login(userLoginModal)">ingresar</ion-button>
-<ion-button color="warning" fill="clear" size="full" (click)="register()">registrar</ion-button>
+        <form [formGroup]="loginForm" (ngSubmit)="login()">
+          <ion-item>
+            <ion-input formControlName="correo" label="email" label-placement="floating" fill="solid" placeholder="Correo@ejemplo.cl" type="email"></ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-input formControlName="password" label="Contraseña" label-placement="floating" fill="solid" type="Password"></ion-input>
+          </ion-item>
+          <ion-button color="dark" fill="clear" size="full">olvidaste tu correo/contraseña?</ion-button>
+          <ion-button type="submit" color="warning" size="full">ingresar</ion-button>
+          <ion-button color="warning" fill="clear" size="full" (click)="register()">registrar</ion-button>
+        </form>
       </ion-card-content>
     </ion-card>
   </div>
