--- a/src/app/pages/asistencia/asistencia.page.html
+++ b/src/app/pages/asistencia/asistencia.page.html
@@ -9,17 +9,11 @@
 
 <ion-content >
   <div class="qr"><img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Rickrolling_QR_code.png?20200615212723" alt=""></div>
-  <ion-card>
-    <ion-card-content>
-      <p>clase de informatica</p>
-      <p>12/10/2023</p>
-    </ion-card-content>
-  </ion-card>
   <ion-list>
     <ion-item lines="inset">
-      <ion-label position="floating">notas</ion-label>
+      <ion-label position="floating">clase</ion-label>
       <ion-textarea></ion-textarea>
     </ion-item>
   </ion-list>
-  <ion-button size="full" color="warning" (click)="verAsistencia()">ver asisterncia</ion-button>
+  <ion-button size="full" color="warning" (click)="verAsistencia()">ver asisterncias</ion-button>
 </ion-content>
