--- a/src/app/pages/home-profe/home-profe.page.html
+++ b/src/app/pages/home-profe/home-profe.page.html
@@ -22,19 +22,12 @@
     </ion-label>
   </ion-item>
 </ion-list>
-<ion-card>
+<ion-card >
   <ion-card-header>
-    <ion-card-subtitle>Asistencia</ion-card-subtitle>
+    <ion-card-subtitle class="flex-center">Asistencias</ion-card-subtitle>
   </ion-card-header>
   <ion-card-content>
-    <ion-item lines="none">
-      <ion-icon name="hourglass-outline" slot="start" color="warning"></ion-icon>
-      <ion-label>
-        presente
-        <p>22/10/2023</p>
-      </ion-label>
-    </ion-item>
-    <ion-button color="warning" fill="clear" size="full" (click)="lista()">ver todo</ion-button>
+    <ion-button color="warning" size="full" (click)="lista()">ver todas las Asistencia</ion-button>
   </ion-card-content>
 </ion-card>
 <ion-fab vertical="bottom" horizontal="end" slot="fixed">
