--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -3,9 +3,6 @@
     <ion-card>
       <ion-card-header>
         <ion-card-title color="warning" class="flex-center" fill="clear" size="full">DuocAsistencias</ion-card-title>
-        <ion-item *ngIf="loginError" class="error-message"><ion-card class="flex-center" color="danger">
-          <p>Correo o/y contraseña incorrecta</p>
-        </ion-card></ion-item>
       </ion-card-header>
       <ion-card-content>
         <form [formGroup]="loginForm" (ngSubmit)="login()">
@@ -20,6 +17,12 @@
           <ion-button color="warning" fill="clear" size="full" (click)="register()">registrar</ion-button>
         </form>
       </ion-card-content>
+      <ion-item *ngIf="loginError" class="error-message"><ion-card class="flex-center" color="danger">
+        <p>Correo o/y contraseña incorrecta</p>
+      </ion-card></ion-item>
+      <ion-item *ngIf="vacio" class="error-message"><ion-card class="flex-center" color="danger">
+        <p>....................campos vacios.................</p>
+      </ion-card></ion-item>
     </ion-card>
   </div>
 </ion-content>
