--- a/src/global.scss
+++ b/src/global.scss
@@ -31,3 +31,8 @@
     align-items: center;
     height: 100%;
 }
+.centrar{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
