--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -28,6 +28,9 @@
   </ion-card-header>
   <ion-card-content>
     <ion-button color="warning" size="full" (click)="miAsistencia()">ver mis Asistencia</ion-button>
+    <ion-fab-button color="warning">
+      <ion-icon name="add" (click)="registrarAsistencia"></ion-icon>
+    </ion-fab-button>
   </ion-card-content>
 </ion-card>
 </ion-content>
