--- a/src/app/pages/asistencia/asistencia.page.html
+++ b/src/app/pages/asistencia/asistencia.page.html
@@ -8,6 +8,7 @@
 </ion-header>
 
 <ion-content >
+  <ion-button (click)="generarQr()">GENERAR QR</ion-button>
   <div class="qr"><img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Rickrolling_QR_code.png?20200615212723" alt=""></div>
   <ion-list>
     <ion-item lines="inset">
