--- a/src/app/pages/home-profe/home-profe.page.html
+++ b/src/app/pages/home-profe/home-profe.page.html
@@ -29,6 +29,9 @@
   <ion-card-content>
     <ion-button color="warning" size="full" (click)="lista()">ver todas las Asistencia</ion-button>
   </ion-card-content>
+  <ion-card-content>
+    <ion-button color="warning" size="full" (click)="nuevaClase()">Crear Clase</ion-button>
+  </ion-card-content>
 </ion-card>
 <ion-fab vertical="bottom" horizontal="end" slot="fixed">
 <ion-fab-button color="warning">
