--- a/src/app/pages/home-profe/home-profe.page.html
+++ b/src/app/pages/home-profe/home-profe.page.html
@@ -28,11 +28,8 @@
   </ion-card-header>
   <ion-card-content>
     <ion-button color="warning" size="full" (click)="lista()">ver todas las Asistencia</ion-button>
+    <ion-button color="warning" size="full" (click)="asistencia()">crear asignatura</ion-button>
+    <ion-button color="warning" size="full" (click)="qr()">crear qr</ion-button>
   </ion-card-content>
 </ion-card>
-<ion-fab vertical="bottom" horizontal="end" slot="fixed">
-<ion-fab-button color="warning">
-  <ion-icon name="add" (click)="asistencia()"></ion-icon>
-</ion-fab-button>
-</ion-fab>
 </ion-content>
