--- a/src/app/pages/mi-asistencia/mi-asistencia.page.html
+++ b/src/app/pages/mi-asistencia/mi-asistencia.page.html
@@ -27,7 +27,7 @@
         </ion-avatar>
         <ion-label>
           <p>{{ asistencia.id_user }}</p>
-          <p>{{ asistencia.materia }}</p>
+          <p>{{ asistencia.asignatura }}</p>
           <p>{{ asistencia.fecha }}</p>
         </ion-label>
       </ion-item>
